--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -45,11 +45,14 @@ html {
 body {
   height: 800px;
   width: 1440px;
-  overflow: hidden;
+  // overflow: hidden;
 
   font-family: var(--font-open-sans), sans-serif;
   font-size: 1.6rem;
   text-align: left;
+  color: #fff;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 
   display: flex;
   flex-direction: column;
