--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -2,6 +2,9 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
+  width: 1200px;
+  height: 800px;
+  gap: 10rem;
 
   .grid-1st {
     grid-column: span 2;
@@ -9,5 +12,8 @@
 
   .grid-4th {
     grid-column: span 2;
+    // align-self: end;
+    justify-self: end;
+    margin-top: -4rem;
   }
 }
