--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,9 +1,10 @@
 // Footer
 .attribution {
   font-size: 11px;
-  text-align: center;
+  text-align: left;
   position: absolute;
-  bottom: 12rem;
+  bottom: 4rem;
+  left: 13rem;
 
   @media only screen and (max-width: 950px) {
     bottom: 4rem;
